--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy": "./Deploy.sh"
   },
   "dependencies": {
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
